--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@sap-cloud-sdk/connectivity": "^3.15.0",
+    "@sap-cloud-sdk/http-client": "^3.15.0",
+    "@sap-cloud-sdk/resilience": "^3.15.0",
     "@sap/cds": ">=5",
     "express": "^4"
   },
@@ -41,6 +44,14 @@
     "rules": {
       "no-console": "off",
       "require-atomic-updates": "off"
+    }
+  },
+  "cds": {
+    "requires": {
+      "srv_ext": {
+        "kind": "odata-v2",
+        "model": "srv/external/srv_ext"
+      }
     }
   }
 }
